--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,16 +9,17 @@
       		<form role="form">
 
       			<div class="form-group">
-      				<input type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
+      				<input ng-model="userInfo.userName" type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
       			</div>
 
   					<div class="form-group">
-  						<input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+  						<input ng-model="userInfo.password" type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
   					</div>
 
-      			<input type="submit" value="login" class="btn btn-info btn-block">
+      			<input ng-click="logon()" type="submit" value="login" class="btn btn-info btn-block">
 
       		</form>
+          <a class="pull-right" ng-href="#/signup">sign up</a>
       	</div>
   		</div>
   	</div>
