--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -10,7 +10,7 @@
       			<div class="row">
       				<div class="col-xs-6 col-sm-6 col-md-6">
       					<div class="form-group">
-                  <input ng-model="userInfo.firstName" type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="{{'First Name' | i18n}}">
+                  <input ng-model="userInfo.firstName" type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
       					</div>
       				</div>
       				<div class="col-xs-6 col-sm-6 col-md-6">
@@ -21,12 +21,25 @@
       			</div>
 
       			<div class="form-group">
-      				<input ng-model="userInfo.email" type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+      				<input ng-model="userInfo.emailAddress" type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
       			</div>
 
       			<div class="form-group">
-      				<input ng-model="userInfo.userName" type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
+      				<input ng-model="userInfo.username" type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
       			</div>
+
+            <div class="row">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group">
+                  <input ng-model="userInfo.phoneNumber" type="tel" name="phoneNumber" id="phoneNumber" class="form-control input-sm" placeholder="Phone number">
+                </div>
+              </div>
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <div class="form-group">
+                  <input ng-model="userInfo.gender" type="number" name="gender" id="gender" class="form-control input-sm" placeholder="gender">
+                </div>
+              </div>
+            </div>
 
       			<div class="row">
       				<div class="col-xs-6 col-sm-6 col-md-6">
