--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -75,6 +75,7 @@ body {
   /* Space out the masthead */
   .header {
     margin-bottom: 30px;
+    border-bottom: none;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
