--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,7 +9,7 @@
       		<form role="form">
 
       			<div class="form-group">
-      				<input ng-model="userInfo.userName" type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
+      				<input ng-model="userInfo.username" type="text" name="user_name" id="user_name" class="form-control input-sm" placeholder="Username">
       			</div>
 
   					<div class="form-group">
