added resources, not working

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -4,8 +4,7 @@
     <div class="container">
       <h1>{{'Welcome' | translate}}</h1>
       <p>
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          Search to find community resources for your area!
       </p>
     </div>
   </section>
